# tiny-distillation

./: .gitignore  README.md  pyproject.toml  requirements.txt
tests/: test_calibrated_labels.py  test_evaluation_metrics.py  test_pipeline.py  test_reasoning_strategies.py  test_scoring_strategies.py  test_speculative_decoding.py  test_student_training.py  test_teachers.py
tiny_distillation/: __init__.py  __main__.py  demo.py  pipeline.py
tiny_distillation/calibrated_labels/: __init__.py  base.py  calibration.py  calibrator.py  filtering.py  label_builders.py  weighting.py
tiny_distillation/core/: __init__.py  math_utils.py  types.py
tiny_distillation/evaluation/: __init__.py  base.py  classification.py  metrics.py  reasoning.py
tiny_distillation/generate_reasoning/: __init__.py  base.py  generator.py  strategies.py
tiny_distillation/inference/: __init__.py  speculative_decoding.py
tiny_distillation/preparation/: __init__.py  socre.py
tiny_distillation/preparation/calibrated_labels/: __init__.py
tiny_distillation/preparation/generate_reasoning/: __init__.py
tiny_distillation/preparation/score/: __init__.py
tiny_distillation/score/: __init__.py  base.py  scorer.py  strategies.py
tiny_distillation/student_training/: __init__.py  losses.py  models.py  schedules.py  student_training.py
tiny_distillation/teachers/: __init__.py  anthropic_teacher.py  base.py  callable.py  deepseek_teacher.py  huggingface_teacher.py  openai_teacher.py  rule_based.py  teacher.py
tiny_distillation/training/: __init__.py  student_training.py
